plugins {
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

ext.moduleName = 'net.mahdilamb.dataviz.fx'

java {
    modularity.inferModulePath = true
}
compileJava {
    sourceCompatibility = JavaVersion.VERSION_16
    targetCompatibility = JavaVersion.VERSION_16

}

group 'net.mahdilamb'
version '0.1.231-SNAPSHOT'

repositories {
    mavenCentral()
    maven {
        url "https://oss.sonatype.org/content/repositories/snapshots/"
    }
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
    implementation 'net.mahdilamb:dataviz:0.1.3-SNAPSHOT'
    implementation 'net.mahdilamb:dataframe:0.2.2'
    implementation 'net.mahdilamb:colormap:0.9.511'


}

test {
    useJUnitPlatform()
}
javafx {
    version = "16"
    modules = ['javafx.controls']
}
javadoc {
    options.tags = ["apiNote", "implNote"]
}

task fxTest(type: JavaExec, dependsOn: ['testClasses']) {
    classpath = sourceSets.test.runtimeClasspath
    jvmArgs = ['--module-path', classpath.asPath,
               '--add-modules', 'javafx.controls'
    ]
    main = "net.mahdilamb.dataviz.fx.ChartFXTest"
}
